@@ -14,6 +14,9 @@
 #
 # History:
 #
+#	03/02/2017	lec
+#	- TR12540/Disease Ontology (DO)/added OMIMdeleteobsolete.py/obsolete
+#
 #	11/11/2016	lec
 #	- TR12427/Disease Ontology (DO)/added OMIMdeleteobsolete.py
 #
@@ -40,7 +43,7 @@ export RUNTIME_DIR
 export ARCHIVE_DIR
 export ARCHIVEREPORTS_DIR
 
-LOAD_PROGRAM="OMIM.setup OMIM.py OMIMtermcheck.py ${LOAD_PROGRAM} OMIMdeleteobsolete.py"
+LOAD_PROGRAM="OMIM.setup OMIM.py OMIMtermcheck.py ${LOAD_PROGRAM}"
 export LOAD_PROGRAM
 
 case `uname -n` in
