@@ -1,3 +1,12 @@
+TAG: vocload-6-0-10-?
+DATE: 03/01/2017
+STAFF: lec
+CHANGES: 
+TR12540/Disease Ontology (DO) All The Way
+OMIM.config : OMIMdeleteobsolete.py is obsolete
+OMIM.py : comment out OMIM.animalmodel
+OMIMtermcheck.py : remove OMIM annotation query
+
 TAG: vocload-6-0-8-5
 TAG: vocload-6-0-8-4
 TAG: vocload-6-0-8-3
